# velooverlay

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  prd.txt  tdd.md
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  cropAspect.ts  index.css  types.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs  render.rs  video_meta.rs
app/src/components/: FramingEditor.tsx  SyncTimeline.tsx  Timeline.tsx  Toolbar.tsx  WidgetInspector.tsx  WidgetPanel.tsx
app/src/components/Stage/: WidgetCanvas.tsx  index.tsx
app/src/export/: ExportWorker.ts  widgetRegistry.ts
app/src/hooks/: useDragDrop.ts  useTelemetryAtTime.ts
app/src/store/: useStore.ts
crates/velo-cli/: Cargo.toml
crates/velo-cli/src/: main.rs  overlay.rs  video_meta.rs
crates/velo-core/: Cargo.toml
crates/velo-core/src/: error.rs  lib.rs  model.rs  pipeline.rs
crates/velo-core/src/interpolation/: linear.rs  mod.rs
crates/velo-core/src/parser/: fit.rs  gpx.rs  mod.rs  tcx.rs
crates/velo-core/src/render/: layout.rs  mod.rs
crates/velo-core/src/sync/: manual.rs  mod.rs  timestamp.rs
crates/widgets-builtin/: Cargo.toml
crates/widgets-builtin/src/: dispatch.rs  elevation_profile.rs  font.rs  lib.rs  metric_tile.rs  renderer.rs  snake_map.rs
examples/: layout.json
