[workspace]
resolver = "2"
members = [
    "crates/velo-core",
    "crates/widgets-builtin",
    "crates/velo-cli",
    "app/src-tauri",
]

# Workspace-level package metadata inherited by all crates
[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/velooverlay/velooverlay"
authors      = ["VeloOverlay Contributors"]

# Shared dependencies: define versions here once.
# Each crate references them with `{ workspace = true }` — no version drift.
[workspace.dependencies]
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "1"
anyhow       = "1"
