[package]
name        = "widgets-builtin"
description = "Built-in widget renderers for the VeloOverlay CLI (tiny-skia)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
velo-core  = { path = "../velo-core" }
serde_json = { workspace = true }

# 2D raster graphics for CLI widget rendering (no GPU/browser required)
tiny-skia = "0.11"

# Pure-Rust font rasterizer for text in CLI widget frames
fontdue = "0.7"
